@@ -1,12 +1,13 @@
 AUX eric-snapshot-20090627-no-interactive.patch 731 RMD160 97aaa6ff75ee8d74fa3bfa2a7a7d5dae5a49c1c8 SHA1 305cdf893b40577750c46e0fb15c3a6057ca495c SHA256 562fca1c080d16b93e59236b9260f97ff5fc6e79cb25288def2e5849d42e65f2
-DIST eric4-4.4-snapshot-20090726.tar.gz 6667921 RMD160 55a5278d3de733349609823b24c990566584311f SHA1 91b85c40bbceec51ed727646e2f60af0ccf8e450 SHA256 cd702c3d40ef743d0949987642d1e551c9dc9cede2626cf832be8f6d8ff5f7ee
-DIST eric4-i18n-cs-4.4-snapshot-20090726.tar.gz 424690 RMD160 2ca5eb7d1c4f081bbd26bedf1a68e1d8b6e8a6a6 SHA1 159aef6a9522f604cfdfa543ffec8e991935e53c SHA256 90232bec706a532e676df6bf1cf7a71e298665240b1b316e66e448d526340853
-DIST eric4-i18n-de-4.4-snapshot-20090726.tar.gz 428159 RMD160 4cc06d7d41c0824d3aca271c81c70973fa0b7c2b SHA1 b8ac43f37cdb7f16ff81f1001152dbdbfbbb18da SHA256 085ab3b0ebe0a08e467e8855efb0a062d2bfdc79ede074ce2aba0b20389fe754
-DIST eric4-i18n-es-4.4-snapshot-20090726.tar.gz 429076 RMD160 6c7d99dc030a319153a09330a08442728b1407f6 SHA1 d2cf34f3363d59134d23d30714b4320e7155f063 SHA256 86c463d9ce96bd832939ec841b9e070f38878eb1cce56b6431da7674d0e7f115
-DIST eric4-i18n-fr-4.4-snapshot-20090726.tar.gz 419667 RMD160 586baf89b414dba2c78f5ae9cf45c58fc450664f SHA1 6f633bd467ae0b7f628d1dd7077fba78dbf9e5d5 SHA256 01ab41bc8970405178f75bcd4b93f173201490a79f13623ae0f10c908ab2314e
-DIST eric4-i18n-ru-4.4-snapshot-20090726.tar.gz 410357 RMD160 b50ada6d3ec36ba5f5a41404b515a9688ed2cf6a SHA1 f363a65b32718169195b0eaf456be0e1e26ccd47 SHA256 8a7aaf173dcab8853e4ea23a055705cb197a3653ff3807aa04f233000e3cef9c
-DIST eric4-i18n-tr-4.4-snapshot-20090726.tar.gz 375040 RMD160 236f7877b83984c6079e35cf23eb7cdf28f13575 SHA1 4a50f59266bd69643b5cfe79fe449d5908573257 SHA256 dd75df0ded528810811e548f271a41545b89b1c35a74ab7f95bdc04194a23a88
-DIST eric4-i18n-zh_CN.GB2312-4.4-snapshot-20090726.tar.gz 381675 RMD160 109f84c5a4185c229717e8d678281f2adf132dbc SHA1 f75b70f0123cef7f01acb0832beeedf1766272ff SHA256 e112b0f0298bb45fae2fa0bec61430f1aa2bbab430bc8b5d9c68f5e16cf9e4ad
-EBUILD eric-4.4_pre20090726.ebuild 2491 RMD160 2860202c9720272ba85824b2d79c041722a29bc9 SHA1 482d9e7c7f543dc8319c51cfe794888a2bd4bb87 SHA256 6c0bdbda75c5e24428db9a9e3c255ad76c32b24d256fc13452b69c3a30675044
-MISC ChangeLog 2054 RMD160 8e28e4db744a7bfadd69923afd2c77c57412eff7 SHA1 1c67dbcfe411c400ba2374316830cf78a30087dc SHA256 de49a990d99922b5c6c02d1146530ec2545cfed70710c590eefadf083462fdb0
+DIST eric4-4.4-snapshot-20090821.tar.gz 6729837 RMD160 1e3d7c467f73b2895440cc85fef7279bf1cc5a36 SHA1 3c9bfd67bd17974b33cfb1935bb2471e3499eacb SHA256 f528c6cff685a26eb426cf7d0f31f8ff99a8028f8fe6cdeeb3d0740837508554
+DIST eric4-i18n-cs-4.4-snapshot-20090821.tar.gz 427281 RMD160 633fcda12504a491d20f34a12cb164e62b9246b7 SHA1 5cc02ea1f05dbbd36e89a4369af2449184cde21a SHA256 64a5098fe97612af0b25e88003300cdb1f117c7efd7ff13f0b61454c446b401e
+DIST eric4-i18n-de-4.4-snapshot-20090821.tar.gz 431529 RMD160 53fae4edf224bf31d4fcbf08326864351d7d3265 SHA1 b6dcfc3fa5a89d78b142e31307322ac7c84e9abf SHA256 c45cce405fe4d9ddc5cfeec2f8d3f26088fb4ab78094954332589e63bd2b1b8b
+DIST eric4-i18n-es-4.4-snapshot-20090821.tar.gz 431746 RMD160 6c21a0dddc9f23c32d9f09a373cc58aaab54803f SHA1 6fbf7f0ae3f789ae7af0e24c69af5d4361687dd7 SHA256 e403d0f4befbbfe3a9f3301b53d100746c757364ed11895100edacd44be7349c
+DIST eric4-i18n-fr-4.4-snapshot-20090821.tar.gz 421982 RMD160 d83d9a2d36f6aa7fbaa475452d94d605f89e4b61 SHA1 09cedfb43108e0945c9438ed38deb875ae3cb8ad SHA256 a02e0b616a422890fdf4adbc0c7c3e22f1230bd5d3770ca64f653bf2d8df233a
+DIST eric4-i18n-it-4.4-snapshot-20090821.tar.gz 333239 RMD160 3292f286969dc9ae93406519e328d19aae67fd18 SHA1 bbd729c8c298ab14fcbb3e871399fa81c42b62ac SHA256 4a0eefd37e430aa62d9a34958d921427fee36b9932e857b2f3c1cd1320ff6c61
+DIST eric4-i18n-ru-4.4-snapshot-20090821.tar.gz 412098 RMD160 64daee91156d1164b6281fb6a46d428a8adae78f SHA1 6aa1b8bd7447d0839cfae17da5ac5209821ac1c5 SHA256 3f58d675cb4729a83653ee3ca02a9548d33a025aa46452182f0099f26266014d
+DIST eric4-i18n-tr-4.4-snapshot-20090821.tar.gz 377142 RMD160 7d7567df10ae4d3abd10fa7d0f3763e182b56578 SHA1 85d4b767fef0945dec654ac86aa3d2a4f756af1b SHA256 4ecc0f18297278374868289685e01400ac1111d2c77858c9178949aaf3e67a19
+DIST eric4-i18n-zh_CN.GB2312-4.4-snapshot-20090821.tar.gz 383735 RMD160 c5cee7d2dad40db3fa520d56908a61d7ee3a70c1 SHA1 8e6109c84ef6da1ec9bb9a31c27313effbafcf4b SHA256 829a269c01c54020f91c77bd12220305ae0986f62334edd5b818eea361a3b0a3
+EBUILD eric-4.4_pre20090821.ebuild 2016 RMD160 b0f9b1fd0d17d6563fe45e5cdce8634fe3cf6da8 SHA1 c66222697a92c8fe8d7e5c2edf66dafb71dc1106 SHA256 3283d60f0dfbbcd344e63541cfe416c83d3fa4de3a293f536ff7f7052d6accb9
+MISC ChangeLog 2389 RMD160 f9cc6a39e16f2c94daef5d2950a05e2b196edcdd SHA1 9ec8f2e0b6216be14380e947bef15c210aa62a5f SHA256 eadda57fdf134a25ff021445c2324fa946286c307025931955bd2cd877a7832d
 MISC metadata.xml 179 RMD160 887c899594fdaa3d82028c3d84188354d3784cd9 SHA1 551c6b2378ff31eadc1e4860211ec8709ce960bd SHA256 1fbdee58e0ba0f8730f6a27979cb7eeed8ebd3afa316d61b34a5f4893291a646
